- Added meta props for better preview - Deployed

--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GEM</title>
-    <link rel="icon" type="image/png" href="./GEM Group 2024.jpg" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./fontawesome-free-7.0.0-web/css/all.min.css" />
-  </head>
-  <body>
-    <img src="./GEM Group 2024.jpg" alt="Logo" class="logo" />
-    <div class="card">
-      <div class="icon">🚧</div>
-      <h1>Page Under Construction</h1>
-      <p>
-        We're currently working on something awesome. <br />
-        Please check back again soon!
-      </p>
-        <div class="social-icons">
-        <a href="https://www.facebook.com/gem.egypt.company/" target="_blank" aria-label="Facebook">
-          <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/gem_egypt/" target="_blank" aria-label="Instagram">
-           <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GEM</title>
+
+  <meta property="og:title" content="GEM Egypt" />
+  <meta property="og:description"
+    content="🚧 We're currently working on something awesome. Please check back again soon!" />
+  <meta property="og:image" content="https://gemegypt.com/GEM Group 2024.jpg" />
+  <meta property="og:url" content="https://gemegypt.com/" />
+  <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#004aad" />
+
+  <link rel="icon" type="image/png" href="./GEM Group 2024.jpg" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./fontawesome-free-7.0.0-web/css/all.min.css" />
+</head>
+
+<body>
+  <img src="./GEM Group 2024.jpg" alt="Logo" class="logo" />
+  <div class="card">
+    <div class="icon">🚧</div>
+    <h1>Page Under Construction</h1>
+    <p>
+      We're currently working on something awesome. <br />
+      Please check back again soon!
+    </p>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/gem.egypt.company/" target="_blank" aria-label="Facebook">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/gem_egypt/" target="_blank" aria-label="Instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
